# Video-Shorts-Recommender

./: .gitignore  README.md  YouTube Shorts Recommendation Project.md  main.py  pyproject.toml
configs/: config.yaml  config_small.yaml
scripts/: generate_data_incremental.sh
src/candidate_gen/: faiss_retrieval.py
src/data/: feature_engineering.py  generate_incremental.py  generate_synthetic.py  generate_synthetic_batch.py
