[project]
name = "video-recommender"
version = "0.1.0"
description = "YouTube Shorts-style recommendation system with Transformer-based ranking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML (without torch and faiss for now - will install separately)
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # API & Backend
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    
    # Data Processing
    "pyarrow>=14.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    
    # Monitoring
    "prometheus-client>=0.19.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    
    # HTTP client
    "httpx>=0.25.0",
    "aioredis>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.25.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "wandb>=0.16.0",
]
